--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: mcp-noteshub
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn mcp-server.main:app --host 0.0.0.0 --port 10000
     plan: free
