--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: mcp-noteshub
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn mcp-server.main:app --host 0.0.0.0 --port 10000
+    rootDir: mcp-server
+    buildCommand: pip install -r ../requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     plan: free
